Update de ma branche avant le merge

--- a/XGBoost.ipynb
+++ b/XGBoost.ipynb
@@ -2,15 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [],
    "source": [
     "from load_dataset import load_data\n",
     "import utils\n",
     "import xgboost as xgb\n",
-    "from sklearn.model_selection import train_test_split, cross_val_score\n",
-    "from sklearn.metrics import classification_report"
+    "from sklearn.model_selection import train_test_split, cross_val_score, GridSearchCV\n",
+    "from sklearn.metrics import classification_report\n",
+    "import pandas as pd"
    ]
   },
   {
@@ -22,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 165,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 167,
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 168,
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 169,
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 170,
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +120,7 @@
        "array([0.90373281, 0.8976378 , 0.90551181, 0.9015748 , 0.88188976])"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 170,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -132,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 171,
    "metadata": {},
    "outputs": [
     {
@@ -156,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 172,
    "metadata": {},
    "outputs": [
     {
@@ -250,7 +251,7 @@
        "[135 rows x 1 columns]"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 172,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -263,12 +264,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Classification par xgboost (Sans One-Hot Encoding):"
+    "## Classification par xgboost (Sans One-Hot Encoding):\n",
+    "\n",
+    "En utilisant le paramètre enable_categorical=True, Shap n'est pas compatible avec cette méthode"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 173,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 174,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 175,
    "metadata": {},
    "outputs": [
     {
@@ -306,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 176,
    "metadata": {},
    "outputs": [
     {
@@ -323,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 177,
    "metadata": {},
    "outputs": [
     {
@@ -349,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 178,
    "metadata": {},
    "outputs": [
     {
@@ -358,7 +361,7 @@
        "array([0.90176817, 0.88976378, 0.90944882, 0.9015748 , 0.88779528])"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 178,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -371,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 179,
    "metadata": {},
    "outputs": [
     {
@@ -395,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 180,
    "metadata": {},
    "outputs": [
     {
@@ -596,13 +599,120 @@
        "Besoins éducatifs spéciaux                            0.000000"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 180,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "utils.features_importance(xgbClassifier, X_train.columns)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Optimisation des Hyperparamètres"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 181,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X, y, cat_features = load_data().get_data_X_y(data='simplify', OneHot=True)\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 182,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Meilleurs hyperparamèetres:\n",
+      "  booster  learning_rate  n_estimators        objective\n",
+      "0  gbtree            0.1            50  binary:logistic\n",
+      "\n",
+      "Meilleur score: 0.9205512115483762\n"
+     ]
+    }
+   ],
+   "source": [
+    "# init xgb classifier\n",
+    "xgb_clf = xgb.XGBClassifier(verbosity=0, random_state=42)\n",
+    "\n",
+    "param_grid = {\n",
+    "    'objective':[\"binary:logistic\", \"binary:hinge\"],\n",
+    "    'booster':[\"gblinear\", \"gbtree\"],\n",
+    "    'n_estimators': [50, 100, 150],\n",
+    "    'learning_rate': [0.01, 0.05, 0.1],\n",
+    "}\n",
+    "\n",
+    "\n",
+    "# init grid search\n",
+    "grid_search = GridSearchCV(estimator=xgb_clf, param_grid=param_grid, cv=3, scoring='f1')\n",
+    "\n",
+    "grid_search.fit(X_train, y_train)\n",
+    "\n",
+    "best_parameters = grid_search.best_params_\n",
+    "best_score = grid_search.best_score_\n",
+    "\n",
+    "print(\"Meilleurs hyperparamèetres:\")\n",
+    "best_parameters_df = {key: [value] for key, value in best_parameters.items()}\n",
+    "df = pd.DataFrame(best_parameters_df)\n",
+    "print(df)\n",
+    "print()\n",
+    "print(\"Meilleur score:\", best_score)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 183,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = grid_search.best_estimator_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 184,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train Accuracy : 95.789 %\n"
+     ]
+    }
+   ],
+   "source": [
+    "model.fit(X_train, y_train)\n",
+    "\n",
+    "print(f\"Train Accuracy : {model.score(X_train, y_train) * 100:.3f} %\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 185,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test Accuracy : 90.542 %\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Test Accuracy : {model.score(X_test, y_test) * 100:.3f} %\")"
    ]
   }
  ],
