added some tools to gather/display feature import

--- a/KNN.ipynb
+++ b/KNN.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,11 +36,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=42)"
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=42)\n",
+    "X_train_cpy = X_train.copy()"
    ]
   },
   {
@@ -53,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -99,7 +100,7 @@
        "\"\\nloc = np.arange(1,n_range + 1,step=1.0)\\nplt.figure(figsize = (10, 6))\\nplt.plot(range(1,n_range + 1), mean_acc)\\nplt.xticks(loc)\\nplt.xlabel('Number of Neighbors ')\\nplt.ylabel('Accuracy')\\nplt.show()\\n\""
       ]
      },
-     "execution_count": 40,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -145,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -184,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +195,7 @@
       "\n",
       "control\n",
       "KNeighborsClassifier with params {'algorithm': 'auto', 'leaf_size': 30, 'metric': 'minkowski', 'metric_params': None, 'n_jobs': None, 'n_neighbors': 5, 'p': 2, 'weights': 'uniform'}\n",
-      "train_time: 0.3078937530517578, classification report: \n",
+      "train_time: 0.2749974727630615, classification report: \n",
       "              precision    recall  f1-score   support\n",
       "\n",
       "           0       0.89      0.69      0.78       435\n",
@@ -208,7 +209,7 @@
       "\n",
       "with optimized hyperparameters\n",
       "KNeighborsClassifier with params {'algorithm': 'ball_tree', 'leaf_size': 30, 'metric': 'minkowski', 'metric_params': None, 'n_jobs': None, 'n_neighbors': 14, 'p': 1, 'weights': 'uniform'}\n",
-      "train_time: 0.20114994049072266, classification report: \n",
+      "train_time: 0.1634986400604248, classification report: \n",
       "              precision    recall  f1-score   support\n",
       "\n",
       "           0       0.93      0.71      0.80       435\n",
@@ -218,7 +219,7 @@
       "   macro avg       0.88      0.84      0.85      1089\n",
       "weighted avg       0.87      0.86      0.86      1089\n",
       "\n",
-      "performance: 0.8352894653590636\n"
+      "performance: 0.8364388906464197\n"
      ]
     }
    ],
@@ -227,6 +228,28 @@
     "names = ['control', 'with optimized hyperparameters']\n",
     "\n",
     "utils.compare_classifiers(tuned_clf, X, y, clf_names=names)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'KNeighborsClassifier' object has no attribute 'feature_importances_'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\samue\\Documents\\school\\A2023\\GIF-4101\\proj\\MachineLearningStudentSuccess\\KNN.ipynb Cell 13\u001b[0m line \u001b[0;36m1\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/samue/Documents/school/A2023/GIF-4101/proj/MachineLearningStudentSuccess/KNN.ipynb#X34sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m utils\u001b[39m.\u001b[39;49mfeatures_importance(KNeighborsClassifier(\u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mtuned_best_param_1), X_train_cpy\u001b[39m.\u001b[39;49mcolumns, plot\u001b[39m=\u001b[39;49m\u001b[39mFalse\u001b[39;49;00m, log\u001b[39m=\u001b[39;49m\u001b[39mTrue\u001b[39;49;00m)\n",
+      "File \u001b[1;32mc:\\Users\\samue\\Documents\\school\\A2023\\GIF-4101\\proj\\MachineLearningStudentSuccess\\utils.py:90\u001b[0m, in \u001b[0;36mfeatures_importance\u001b[1;34m(clf, X_train_columns, plot, _coef, log)\u001b[0m\n\u001b[0;32m     88\u001b[0m     feat_imp \u001b[39m=\u001b[39m clf\u001b[39m.\u001b[39mcoef_\u001b[39m.\u001b[39mT\n\u001b[0;32m     89\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m---> 90\u001b[0m     feat_imp \u001b[39m=\u001b[39m clf\u001b[39m.\u001b[39;49mfeature_importances_\n\u001b[0;32m     91\u001b[0m feat_df \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39mDataFrame(\n\u001b[0;32m     92\u001b[0m     feat_imp, index\u001b[39m=\u001b[39mX_train_columns, columns\u001b[39m=\u001b[39m[\u001b[39m\"\u001b[39m\u001b[39mImportance\u001b[39m\u001b[39m\"\u001b[39m])\n\u001b[0;32m     93\u001b[0m \u001b[39msorted\u001b[39m \u001b[39m=\u001b[39m feat_df\u001b[39m.\u001b[39msort_values(by\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mImportance\u001b[39m\u001b[39m\"\u001b[39m, ascending\u001b[39m=\u001b[39m\u001b[39mFalse\u001b[39;00m)\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'KNeighborsClassifier' object has no attribute 'feature_importances_'"
+     ]
+    }
+   ],
+   "source": [
+    "#utils.features_importance(KNeighborsClassifier(**tuned_best_param_1), X_train_cpy.columns, plot=False, log=True)"
    ]
   },
   {
