--- a/logisticRegression.ipynb
+++ b/logisticRegression.ipynb
@@ -51,7 +51,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train Accuracy : 92.326 %\n"
+      "Train Accuracy : 92.365 %\n"
      ]
     }
    ],
@@ -122,6 +122,13 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File features_importances.csv has been updated and saved.\n"
+     ]
+    },
+    {
      "data": {
       "text/html": [
        "<div>\n",
@@ -148,23 +155,23 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>Unités curriculaires 2e semestre (approuvées)</th>\n",
-       "      <td>14.602029</td>\n",
+       "      <td>14.601068</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Unités curriculaires 1er semestre (approuvées)</th>\n",
-       "      <td>10.100678</td>\n",
+       "      <td>10.106462</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Unités curriculaires 2e semestre (sans évaluations)</th>\n",
-       "      <td>4.056225</td>\n",
+       "      <td>4.054678</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Unités curriculaires 2e semestre (note)</th>\n",
-       "      <td>2.731695</td>\n",
+       "      <td>2.733282</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Cours_2</th>\n",
-       "      <td>2.594284</td>\n",
+       "      <td>2.593791</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -172,23 +179,23 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Unités curriculaires 2e semestre (créditées)</th>\n",
-       "      <td>-2.305121</td>\n",
+       "      <td>-2.309602</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Unités curriculaires 1er semestre (créditées)</th>\n",
-       "      <td>-2.695534</td>\n",
+       "      <td>-2.696617</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Unités curriculaires 2e semestre (évaluations)</th>\n",
-       "      <td>-3.198157</td>\n",
+       "      <td>-3.198596</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Unités curriculaires 1er semestre (inscrits)</th>\n",
-       "      <td>-3.430284</td>\n",
+       "      <td>-3.428598</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Unités curriculaires 2e semestre (inscrits)</th>\n",
-       "      <td>-8.402948</td>\n",
+       "      <td>-8.402893</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -197,17 +204,17 @@
       ],
       "text/plain": [
        "                                                    Importance\n",
-       "Unités curriculaires 2e semestre (approuvées)        14.602029\n",
-       "Unités curriculaires 1er semestre (approuvées)       10.100678\n",
-       "Unités curriculaires 2e semestre (sans évaluati...    4.056225\n",
-       "Unités curriculaires 2e semestre (note)               2.731695\n",
-       "Cours_2                                               2.594284\n",
+       "Unités curriculaires 2e semestre (approuvées)        14.601068\n",
+       "Unités curriculaires 1er semestre (approuvées)       10.106462\n",
+       "Unités curriculaires 2e semestre (sans évaluati...    4.054678\n",
+       "Unités curriculaires 2e semestre (note)               2.733282\n",
+       "Cours_2                                               2.593791\n",
        "...                                                        ...\n",
-       "Unités curriculaires 2e semestre (créditées)         -2.305121\n",
-       "Unités curriculaires 1er semestre (créditées)        -2.695534\n",
-       "Unités curriculaires 2e semestre (évaluations)       -3.198157\n",
-       "Unités curriculaires 1er semestre (inscrits)         -3.430284\n",
-       "Unités curriculaires 2e semestre (inscrits)          -8.402948\n",
+       "Unités curriculaires 2e semestre (créditées)         -2.309602\n",
+       "Unités curriculaires 1er semestre (créditées)        -2.696617\n",
+       "Unités curriculaires 2e semestre (évaluations)       -3.198596\n",
+       "Unités curriculaires 1er semestre (inscrits)         -3.428598\n",
+       "Unités curriculaires 2e semestre (inscrits)          -8.402893\n",
        "\n",
        "[135 rows x 1 columns]"
       ]
@@ -218,7 +225,7 @@
     }
    ],
    "source": [
-    "utils.features_importance(logistic_regression, X_train.columns, plot=False, _coef=True)"
+    "utils.features_importance(logistic_regression, X_train.columns, plot=False, _coef=True, log=False)"
    ]
   },
   {
@@ -368,7 +375,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
