--- a/SVC.ipynb
+++ b/SVC.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +128,7 @@
        "\" parameters_to_tune = {\\n    'kernel': ['linear', 'rbf', 'poly', 'sigmoid'],\\n    'C': [0.1, 1, 10, 100],\\n    'gamma': ['scale', 'auto', 0.001, 0.0001],\\n    'degree': [2, 3, 4]\\n}\\n\\ngrid_search = GridSearchCV(SVC(), parameters_to_tune, refit=True, verbose=3, cv=5, n_jobs=-1)\\ngrid_search.fit(X_train, y_train)\\n\\nprint(grid_search.best_params_) \""
       ]
      },
-     "execution_count": 23,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -149,135 +149,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Fitting 5 folds for each of 12 candidates, totalling 60 fits\n",
-      "[CV 1/5; 1/12] START C=0.1, gamma=scale, kernel=linear..........................\n",
-      "[CV 2/5; 1/12] START C=0.1, gamma=scale, kernel=linear..........................\n",
-      "[CV 3/5; 1/12] START C=0.1, gamma=scale, kernel=linear..........................\n",
-      "[CV 4/5; 1/12] START C=0.1, gamma=scale, kernel=linear..........................\n",
-      "[CV 5/5; 1/12] START C=0.1, gamma=scale, kernel=linear..........................\n",
-      "[CV 1/5; 2/12] START C=0.1, gamma=scale, kernel=rbf.............................\n",
-      "[CV 2/5; 2/12] START C=0.1, gamma=scale, kernel=rbf.............................\n",
-      "[CV 3/5; 2/12] START C=0.1, gamma=scale, kernel=rbf.............................\n",
-      "[CV 1/5; 1/12] END C=0.1, gamma=scale, kernel=linear;, score=0.939 total time=   0.2s\n",
-      "[CV 2/5; 1/12] END C=0.1, gamma=scale, kernel=linear;, score=0.917 total time=   0.2s\n",
-      "[CV 4/5; 2/12] START C=0.1, gamma=scale, kernel=rbf.............................\n",
-      "[CV 5/5; 2/12] START C=0.1, gamma=scale, kernel=rbf.............................\n",
-      "[CV 4/5; 1/12] END C=0.1, gamma=scale, kernel=linear;, score=0.922 total time=   0.3s\n",
-      "[CV 1/5; 3/12] START C=0.1, gamma=0.001, kernel=linear..........................\n",
-      "[CV 3/5; 1/12] END C=0.1, gamma=scale, kernel=linear;, score=0.927 total time=   0.3s\n",
-      "[CV 5/5; 1/12] END C=0.1, gamma=scale, kernel=linear;, score=0.929 total time=   0.3s\n",
-      "[CV 2/5; 3/12] START C=0.1, gamma=0.001, kernel=linear..........................\n",
-      "[CV 3/5; 3/12] START C=0.1, gamma=0.001, kernel=linear..........................\n",
-      "[CV 1/5; 2/12] END C=0.1, gamma=scale, kernel=rbf;, score=0.878 total time=   0.5s\n",
-      "[CV 4/5; 3/12] START C=0.1, gamma=0.001, kernel=linear..........................\n",
-      "[CV 2/5; 2/12] END C=0.1, gamma=scale, kernel=rbf;, score=0.859 total time=   0.5s\n",
-      "[CV 5/5; 3/12] START C=0.1, gamma=0.001, kernel=linear..........................\n",
-      "[CV 3/5; 2/12] END C=0.1, gamma=scale, kernel=rbf;, score=0.884 total time=   0.5s\n",
-      "[CV 1/5; 4/12] START C=0.1, gamma=0.001, kernel=rbf.............................\n",
-      "[CV 1/5; 3/12] END C=0.1, gamma=0.001, kernel=linear;, score=0.939 total time=   0.3s\n",
-      "[CV 2/5; 4/12] START C=0.1, gamma=0.001, kernel=rbf.............................\n",
-      "[CV 2/5; 3/12] END C=0.1, gamma=0.001, kernel=linear;, score=0.917 total time=   0.3s\n",
-      "[CV 3/5; 4/12] START C=0.1, gamma=0.001, kernel=rbf.............................\n",
-      "[CV 3/5; 3/12] END C=0.1, gamma=0.001, kernel=linear;, score=0.927 total time=   0.4s\n",
-      "[CV 4/5; 4/12] START C=0.1, gamma=0.001, kernel=rbf.............................\n",
-      "[CV 4/5; 2/12] END C=0.1, gamma=scale, kernel=rbf;, score=0.857 total time=   0.6s\n",
-      "[CV 5/5; 4/12] START C=0.1, gamma=0.001, kernel=rbf.............................\n",
-      "[CV 5/5; 2/12] END C=0.1, gamma=scale, kernel=rbf;, score=0.861 total time=   0.7s\n",
-      "[CV 1/5; 5/12] START C=1, gamma=scale, kernel=linear............................\n",
-      "[CV 4/5; 3/12] END C=0.1, gamma=0.001, kernel=linear;, score=0.922 total time=   0.5s\n",
-      "[CV 5/5; 3/12] END C=0.1, gamma=0.001, kernel=linear;, score=0.929 total time=   0.5s\n",
-      "[CV 2/5; 5/12] START C=1, gamma=scale, kernel=linear............................\n",
-      "[CV 3/5; 5/12] START C=1, gamma=scale, kernel=linear............................\n",
-      "[CV 1/5; 4/12] END C=0.1, gamma=0.001, kernel=rbf;, score=0.885 total time=   0.7s\n",
-      "[CV 4/5; 5/12] START C=1, gamma=scale, kernel=linear............................\n",
-      "[CV 2/5; 4/12] END C=0.1, gamma=0.001, kernel=rbf;, score=0.869 total time=   0.7s\n",
-      "[CV 5/5; 5/12] START C=1, gamma=scale, kernel=linear............................\n",
-      "[CV 3/5; 4/12] END C=0.1, gamma=0.001, kernel=rbf;, score=0.883 total time=   0.7s\n",
-      "[CV 1/5; 6/12] START C=1, gamma=scale, kernel=rbf...............................\n",
-      "[CV 4/5; 4/12] END C=0.1, gamma=0.001, kernel=rbf;, score=0.864 total time=   0.6s\n",
-      "[CV 2/5; 6/12] START C=1, gamma=scale, kernel=rbf...............................\n",
-      "[CV 5/5; 4/12] END C=0.1, gamma=0.001, kernel=rbf;, score=0.864 total time=   0.6s\n",
-      "[CV 3/5; 6/12] START C=1, gamma=scale, kernel=rbf...............................\n",
-      "[CV 1/5; 5/12] END C=1, gamma=scale, kernel=linear;, score=0.939 total time=   0.9s\n",
-      "[CV 4/5; 6/12] START C=1, gamma=scale, kernel=rbf...............................\n",
-      "[CV 3/5; 5/12] END C=1, gamma=scale, kernel=linear;, score=0.927 total time=   1.0s\n",
-      "[CV 5/5; 6/12] START C=1, gamma=scale, kernel=rbf...............................\n",
-      "[CV 2/5; 6/12] END C=1, gamma=scale, kernel=rbf;, score=0.909 total time=   0.7s\n",
-      "[CV 1/5; 7/12] START C=1, gamma=0.001, kernel=linear............................\n",
-      "[CV 1/5; 6/12] END C=1, gamma=scale, kernel=rbf;, score=0.920 total time=   0.8s\n",
-      "[CV 2/5; 7/12] START C=1, gamma=0.001, kernel=linear............................\n",
-      "[CV 3/5; 6/12] END C=1, gamma=scale, kernel=rbf;, score=0.911 total time=   0.7s\n",
-      "[CV 3/5; 7/12] START C=1, gamma=0.001, kernel=linear............................\n",
-      "[CV 4/5; 5/12] END C=1, gamma=scale, kernel=linear;, score=0.927 total time=   1.1s\n",
-      "[CV 4/5; 7/12] START C=1, gamma=0.001, kernel=linear............................\n",
-      "[CV 2/5; 5/12] END C=1, gamma=scale, kernel=linear;, score=0.912 total time=   1.5s\n",
-      "[CV 5/5; 7/12] START C=1, gamma=0.001, kernel=linear............................\n",
-      "[CV 5/5; 5/12] END C=1, gamma=scale, kernel=linear;, score=0.930 total time=   1.3s\n",
-      "[CV 4/5; 6/12] END C=1, gamma=scale, kernel=rbf;, score=0.903 total time=   0.8s\n",
-      "[CV 1/5; 8/12] START C=1, gamma=0.001, kernel=rbf...............................\n",
-      "[CV 2/5; 8/12] START C=1, gamma=0.001, kernel=rbf...............................\n",
-      "[CV 5/5; 6/12] END C=1, gamma=scale, kernel=rbf;, score=0.902 total time=   0.8s\n",
-      "[CV 3/5; 8/12] START C=1, gamma=0.001, kernel=rbf...............................\n",
-      "[CV 1/5; 8/12] END C=1, gamma=0.001, kernel=rbf;, score=0.923 total time=   0.6s\n",
-      "[CV 2/5; 8/12] END C=1, gamma=0.001, kernel=rbf;, score=0.910 total time=   0.6s\n",
-      "[CV 4/5; 8/12] START C=1, gamma=0.001, kernel=rbf...............................\n",
-      "[CV 5/5; 8/12] START C=1, gamma=0.001, kernel=rbf...............................\n",
-      "[CV 3/5; 8/12] END C=1, gamma=0.001, kernel=rbf;, score=0.917 total time=   0.6s\n",
-      "[CV 1/5; 7/12] END C=1, gamma=0.001, kernel=linear;, score=0.939 total time=   1.3s\n",
-      "[CV 1/5; 9/12] START C=10, gamma=scale, kernel=linear...........................\n",
-      "[CV 2/5; 9/12] START C=10, gamma=scale, kernel=linear...........................\n",
-      "[CV 3/5; 7/12] END C=1, gamma=0.001, kernel=linear;, score=0.927 total time=   1.2s\n",
-      "[CV 3/5; 9/12] START C=10, gamma=scale, kernel=linear...........................\n",
-      "[CV 4/5; 7/12] END C=1, gamma=0.001, kernel=linear;, score=0.927 total time=   1.1s\n",
-      "[CV 4/5; 9/12] START C=10, gamma=scale, kernel=linear...........................\n",
-      "[CV 5/5; 7/12] END C=1, gamma=0.001, kernel=linear;, score=0.930 total time=   1.1s\n",
-      "[CV 5/5; 9/12] START C=10, gamma=scale, kernel=linear...........................\n",
-      "[CV 4/5; 8/12] END C=1, gamma=0.001, kernel=rbf;, score=0.903 total time=   0.5s\n",
-      "[CV 1/5; 10/12] START C=10, gamma=scale, kernel=rbf.............................\n",
-      "[CV 5/5; 8/12] END C=1, gamma=0.001, kernel=rbf;, score=0.900 total time=   0.6s\n",
-      "[CV 2/5; 10/12] START C=10, gamma=scale, kernel=rbf.............................\n",
-      "[CV 2/5; 7/12] END C=1, gamma=0.001, kernel=linear;, score=0.912 total time=   1.7s\n",
-      "[CV 3/5; 10/12] START C=10, gamma=scale, kernel=rbf.............................\n",
-      "[CV 2/5; 10/12] END C=10, gamma=scale, kernel=rbf;, score=0.915 total time=   0.5s\n",
-      "[CV 4/5; 10/12] START C=10, gamma=scale, kernel=rbf.............................\n",
-      "[CV 1/5; 10/12] END C=10, gamma=scale, kernel=rbf;, score=0.935 total time=   0.5s\n",
-      "[CV 3/5; 10/12] END C=10, gamma=scale, kernel=rbf;, score=0.926 total time=   0.5s\n",
-      "[CV 5/5; 10/12] START C=10, gamma=scale, kernel=rbf.............................\n",
-      "[CV 1/5; 11/12] START C=10, gamma=0.001, kernel=linear..........................\n",
-      "[CV 4/5; 10/12] END C=10, gamma=scale, kernel=rbf;, score=0.918 total time=   0.5s\n",
-      "[CV 5/5; 10/12] END C=10, gamma=scale, kernel=rbf;, score=0.920 total time=   0.5s\n",
-      "[CV 2/5; 11/12] START C=10, gamma=0.001, kernel=linear..........................\n",
-      "[CV 3/5; 11/12] START C=10, gamma=0.001, kernel=linear..........................\n",
-      "[CV 5/5; 9/12] END C=10, gamma=scale, kernel=linear;, score=0.930 total time=   5.0s\n",
-      "[CV 4/5; 11/12] START C=10, gamma=0.001, kernel=linear..........................\n",
-      "[CV 2/5; 9/12] END C=10, gamma=scale, kernel=linear;, score=0.907 total time=   6.3s\n",
-      "[CV 5/5; 11/12] START C=10, gamma=0.001, kernel=linear..........................\n",
-      "[CV 2/5; 11/12] END C=10, gamma=0.001, kernel=linear;, score=0.907 total time=   5.9s\n",
-      "[CV 1/5; 12/12] START C=10, gamma=0.001, kernel=rbf.............................\n",
-      "[CV 1/5; 9/12] END C=10, gamma=scale, kernel=linear;, score=0.936 total time=   7.4s\n",
-      "[CV 2/5; 12/12] START C=10, gamma=0.001, kernel=rbf.............................\n",
-      "[CV 1/5; 12/12] END C=10, gamma=0.001, kernel=rbf;, score=0.933 total time=   0.4s\n",
-      "[CV 3/5; 12/12] START C=10, gamma=0.001, kernel=rbf.............................\n",
-      "[CV 2/5; 12/12] END C=10, gamma=0.001, kernel=rbf;, score=0.918 total time=   0.4s\n",
-      "[CV 4/5; 12/12] START C=10, gamma=0.001, kernel=rbf.............................\n",
-      "[CV 4/5; 9/12] END C=10, gamma=scale, kernel=linear;, score=0.925 total time=   8.1s\n",
-      "[CV 5/5; 12/12] START C=10, gamma=0.001, kernel=rbf.............................\n",
-      "[CV 3/5; 12/12] END C=10, gamma=0.001, kernel=rbf;, score=0.927 total time=   0.4s\n",
-      "[CV 4/5; 12/12] END C=10, gamma=0.001, kernel=rbf;, score=0.920 total time=   0.5s\n",
-      "[CV 1/5; 11/12] END C=10, gamma=0.001, kernel=linear;, score=0.936 total time=   7.4s\n",
-      "[CV 5/5; 12/12] END C=10, gamma=0.001, kernel=rbf;, score=0.918 total time=   0.4s\n",
-      "[CV 3/5; 9/12] END C=10, gamma=scale, kernel=linear;, score=0.917 total time=   8.7s\n",
-      "[CV 3/5; 11/12] END C=10, gamma=0.001, kernel=linear;, score=0.917 total time=   8.2s\n",
-      "[CV 5/5; 11/12] END C=10, gamma=0.001, kernel=linear;, score=0.930 total time=   3.6s\n",
-      "[CV 4/5; 11/12] END C=10, gamma=0.001, kernel=linear;, score=0.925 total time=   5.7s\n",
-      "{'C': 1, 'gamma': 'scale', 'kernel': 'linear'}\n"
+      "Fitting 5 folds for each of 12 candidates, totalling 60 fits\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'C': 0.1, 'gamma': 'scale', 'kernel': 'linear'}\n"
      ]
     }
    ],
@@ -296,14 +182,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train Accuracy : 91.972 %\n"
+      "Train Accuracy : 91.106 %\n"
      ]
     }
    ],
@@ -316,14 +202,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test Accuracy : 91.644 %\n"
+      "Test Accuracy : 91.552 %\n"
      ]
     }
    ],
@@ -333,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -366,47 +252,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[-1.02325535e-02 -1.49964432e-02 -9.48399855e-02 -1.89379727e-01\n",
-      "   3.84769921e-02  3.70320358e-01 -6.24696889e-02 -2.79251958e-02\n",
-      "  -2.69944835e-02 -4.41699303e-01 -3.62974082e-02  4.98724778e-01\n",
-      "   5.56880992e-02  2.09841792e-01 -4.21152370e-02 -1.04367197e-02\n",
-      "  -1.26835197e-02 -1.54601939e-01 -1.39512431e-01  0.00000000e+00\n",
-      "   9.10796858e-02  2.03034685e-01  0.00000000e+00  7.23087592e-02\n",
-      "  -9.27431892e-02 -1.87595279e-01  1.36460318e-01  5.54716096e-02\n",
-      "   5.64462378e-02 -2.69504994e-01  2.70744172e-02 -2.29824209e-01\n",
-      "   4.24483205e-01  7.42312521e-03  0.00000000e+00  1.18740699e-01\n",
-      "   2.94181526e-01  6.63572087e-02  4.18547405e-01 -6.71831932e-01\n",
-      "  -1.82879632e-01  6.59950222e-03  3.84299008e-01  2.04310882e-01\n",
-      "   5.03427460e-02 -1.66237842e-01  1.52329804e-01 -7.49915692e-02\n",
-      "  -5.99767805e-01  7.02737482e-02 -7.02737482e-02  0.00000000e+00\n",
-      "  -1.00000000e-01 -1.88413919e-01 -6.64211899e-02 -7.61166874e-02\n",
-      "   1.38985384e-01  1.76518711e-01  1.15447701e-01 -6.18217581e-02\n",
-      "   2.67304514e-01  1.03034685e-01 -1.09514930e-01  1.00000000e-01\n",
-      "   0.00000000e+00 -8.83487595e-03  9.28105954e-03  1.00000000e-01\n",
-      "  -1.45120049e-01 -1.54328645e-01 -1.00000000e-01 -1.33762787e-01\n",
-      "   1.94624480e-01 -2.11511035e-01  2.73910180e-01  0.00000000e+00\n",
-      "  -2.00000000e-01  0.00000000e+00  1.61096255e-02  0.00000000e+00\n",
-      "   2.31943161e-01 -4.94339895e-02 -1.21879634e-01 -9.36635280e-02\n",
-      "  -9.51424254e-02  2.51758800e-02  1.03964477e-01  1.03061267e-01\n",
-      "   7.01281377e-02 -3.72197848e-04 -4.95122354e-02 -2.75714395e-01\n",
-      "   5.62879472e-02  1.00000000e-01 -1.70216649e-01  0.00000000e+00\n",
-      "   4.48985423e-02  0.00000000e+00  0.00000000e+00  1.00000000e-01\n",
-      "   8.11051794e-02 -2.18796338e-02 -2.78298556e-02 -1.31612760e-01\n",
-      "   2.64828383e-02 -1.92263254e-01  5.47518422e-02  1.79577517e-01\n",
-      "  -3.04295141e-02 -6.10665340e-02 -1.29558896e-01  1.81025427e-01\n",
-      "  -1.47197176e-01  0.00000000e+00  0.00000000e+00  0.00000000e+00\n",
-      "   0.00000000e+00  1.00000000e-01  1.00000000e-01  1.00000000e-01\n",
-      "   0.00000000e+00  1.62877562e-02 -1.62877562e-02 -1.51321297e-02\n",
-      "   1.51321297e-02  2.71915060e-01 -2.71915060e-01 -7.40113496e-01\n",
-      "   7.40113496e-01  8.51759364e-02 -8.51759364e-02 -2.32773685e-01\n",
-      "   2.32773685e-01 -6.82117220e-02  6.82117220e-02]]\n"
+      "[[ 0.10421376 -0.02093673 -0.02381913 -0.04101897 -0.2268206   0.07405449\n",
+      "  -0.0468593   0.01153824 -0.0029237   0.02335793 -0.05918744  0.11526675\n",
+      "  -0.39158429  1.39763712 -0.26823118  0.41267636 -0.01285592  0.05825528\n",
+      "  -0.12994642 -0.16229555  0.02659416  0.36372397 -0.04391105 -0.05855946\n",
+      "  -0.04529809 -0.42742584 -0.01733669  0.50496143  0.02814424  0.13858297\n",
+      "  -0.02841713 -0.03227027 -0.00345831]]\n"
      ]
     }
    ],
@@ -424,33 +282,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "Frais de scolarité à jour_1                      0.740113\n",
-       "Unités curriculaires 2e semestre (approuvées)    0.498725\n",
-       "Mode d'application_10                            0.424483\n",
-       "Cours_5                                          0.418547\n",
-       "Cours_9                                          0.384299\n",
-       "                                                   ...   \n",
-       "Occupation mère_9                               -0.275714\n",
-       "Unités curriculaires 2e semestre (inscrits)     -0.441699\n",
-       "Cours_15                                        -0.599768\n",
-       "Cours_6                                         -0.671832\n",
-       "Frais de scolarité à jour_0                     -0.740113\n",
-       "Length: 135, dtype: float64"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File features_importances.csv has been updated and saved.\n"
+     ]
     }
    ],
    "source": [
-    "pd.Series(coefs[0], index=X_train.columns).sort_values(ascending=False)"
+    "feature_importances = pd.Series(coefs[0], index=X_train.columns).sort_values(ascending=False)\n",
+    "\n",
+    "# feeding it to the compiler\n",
+    "def log_feature_importances(feature_importances):\n",
+    "    s = feature_importances.reset_index()\n",
+    "    line = []\n",
+    "    for index, row in s.iterrows():\n",
+    "        ind, imp = row\n",
+    "        line.append([ind, imp])\n",
+    "    utils.add_model_feature_importances(svcClassifier_optimized, line)\n",
+    "    \n",
+    "#log_feature_importances(feature_importances) # uncomment to load the importances into the compiled csv\n"
    ]
   }
  ],
