Ajout de l'analyse SHAP (Pas encore terminé)

--- a/models_analysis.ipynb
+++ b/models_analysis.ipynb
@@ -44,28 +44,28 @@
     "  <tbody>\n",
     "    <tr>\n",
     "      <th>Simplified + OneHot</th>\n",
-    "      <td>0.903581</td>\n",
+    "      <td>0.90450</td>\n",
     "      <td>0.916437</td>\n",
     "      <td>0.878788</td>\n",
     "      <td>NaN</td>\n",
     "    </tr>\n",
     "    <tr>\n",
     "      <th>Original + OneHot</th>\n",
-    "      <td>0.898072</td>\n",
+    "      <td>0.89899</td>\n",
     "      <td>0.912764</td>\n",
-    "      <td>0.877870</td>\n",
+    "      <td>0.876951</td>\n",
     "      <td>NaN</td>\n",
     "    </tr>\n",
     "    <tr>\n",
     "      <th>Simplified</th>\n",
-    "      <td>0.911846</td>\n",
+    "      <td>NaN</td>\n",
     "      <td>0.915519</td>\n",
     "      <td>0.864096</td>\n",
     "      <td>0.913682</td>\n",
     "    </tr>\n",
     "    <tr>\n",
     "      <th>Original</th>\n",
-    "      <td>0.916437</td>\n",
+    "      <td>NaN</td>\n",
     "      <td>0.918274</td>\n",
     "      <td>0.845730</td>\n",
     "      <td>NaN</td>\n",
@@ -108,28 +108,28 @@
     "  <tbody>\n",
     "    <tr>\n",
     "      <th>Simplified + OneHot</th>\n",
-    "      <td>0.924731</td>\n",
+    "      <td>0.925287</td>\n",
     "      <td>0.934954</td>\n",
     "      <td>0.908966</td>\n",
     "      <td>NaN</td>\n",
     "    </tr>\n",
     "    <tr>\n",
     "      <th>Original + OneHot</th>\n",
-    "      <td>0.921109</td>\n",
+    "      <td>0.921875</td>\n",
     "      <td>0.932288</td>\n",
-    "      <td>0.908591</td>\n",
+    "      <td>0.907840</td>\n",
     "      <td>NaN</td>\n",
     "    </tr>\n",
     "    <tr>\n",
     "      <th>Simplified</th>\n",
-    "      <td>0.931330</td>\n",
+    "      <td>NaN</td>\n",
     "      <td>0.934566</td>\n",
     "      <td>0.899183</td>\n",
     "      <td>0.932953</td>\n",
     "    </tr>\n",
     "    <tr>\n",
     "      <th>Original</th>\n",
-    "      <td>0.934767</td>\n",
+    "      <td>NaN</td>\n",
     "      <td>0.936745</td>\n",
     "      <td>0.886792</td>\n",
     "      <td>NaN</td>\n",
@@ -144,163 +144,24 @@
    "metadata": {},
    "source": [
     "## Arbre de décision, forêt aléatoire, Classifieur naîf bayesien et régression logistique\n",
-    "<div>\n",
-    "<style scoped>\n",
-    "    .dataframe tbody tr th:only-of-type {\n",
-    "        vertical-align: middle;\n",
-    "    }\n",
-    "\n",
-    "    .dataframe tbody tr th {\n",
-    "        vertical-align: top;\n",
-    "    }\n",
-    "\n",
-    "    .dataframe thead th {\n",
-    "        text-align: right;\n",
-    "    }\n",
-    "</style>\n",
-    "<table border=\"1\" class=\"dataframe\">\n",
-    "  <thead>\n",
-    "    <tr style=\"text-align: right;\">\n",
-    "      <th></th>\n",
-    "      <th>Accuracy</th>\n",
-    "      <th>F1 Score</th>\n",
-    "      <th>Rappel (recall)</th>\n",
-    "      <th>Precision</th>\n",
-    "      <th>ROC-AUC</th>\n",
-    "    </tr>\n",
-    "  </thead>\n",
-    "  <tbody>\n",
-    "    <tr>\n",
-    "      <th>Arbre de decision (simplify, OneHot=False)</th>\n",
-    "      <td>0.895317</td>\n",
-    "      <td>0.918221</td>\n",
-    "      <td>0.948148</td>\n",
-    "      <td>0.890125</td>\n",
-    "      <td>0.928726</td>\n",
-    "    </tr>\n",
-    "    <tr>\n",
-    "      <th>Foret aleatoire (simplify, OneHot=False)</th>\n",
-    "      <td>0.909091</td>\n",
-    "      <td>0.929537</td>\n",
-    "      <td>0.967407</td>\n",
-    "      <td>0.894521</td>\n",
-    "      <td>0.952013</td>\n",
-    "    </tr>\n",
-    "    <tr>\n",
-    "      <th>Classificateur naif bayesien (simplify, OneHot=False)</th>\n",
-    "      <td>0.842057</td>\n",
-    "      <td>0.876437</td>\n",
-    "      <td>0.903704</td>\n",
-    "      <td>0.850767</td>\n",
-    "      <td>0.890862</td>\n",
-    "    </tr>\n",
-    "    <tr>\n",
-    "      <th>Régression logistique (simplify, OneHot=False)</th>\n",
-    "      <td>0.914601</td>\n",
-    "      <td>0.932852</td>\n",
-    "      <td>0.957037</td>\n",
-    "      <td>0.909859</td>\n",
-    "      <td>0.954761</td>\n",
-    "    </tr>\n",
-    "    <tr>\n",
-    "      <th>Arbre de decision (original, OneHot=False)</th>\n",
-    "      <td>0.899908</td>\n",
-    "      <td>0.921752</td>\n",
-    "      <td>0.951111</td>\n",
-    "      <td>0.894150</td>\n",
-    "      <td>0.924772</td>\n",
-    "    </tr>\n",
-    "    <tr>\n",
-    "      <th>Foret aleatoire (original, OneHot=False)</th>\n",
-    "      <td>0.905418</td>\n",
-    "      <td>0.926376</td>\n",
-    "      <td>0.960000</td>\n",
-    "      <td>0.895028</td>\n",
-    "      <td>0.951934</td>\n",
-    "    </tr>\n",
-    "    <tr>\n",
-    "      <th>Classificateur naif bayesien (original, OneHot=False)</th>\n",
-    "      <td>0.844812</td>\n",
-    "      <td>0.880057</td>\n",
-    "      <td>0.918519</td>\n",
-    "      <td>0.844687</td>\n",
-    "      <td>0.893163</td>\n",
-    "    </tr>\n",
-    "    <tr>\n",
-    "      <th>Régression logistique (original, OneHot=False)</th>\n",
-    "      <td>0.917355</td>\n",
-    "      <td>0.934877</td>\n",
-    "      <td>0.957037</td>\n",
-    "      <td>0.913720</td>\n",
-    "      <td>0.956894</td>\n",
-    "    </tr>\n",
-    "    <tr>\n",
-    "      <th>Arbre de decision (simplify, OneHot=True)</th>\n",
-    "      <td>0.898990</td>\n",
-    "      <td>0.921316</td>\n",
-    "      <td>0.954074</td>\n",
-    "      <td>0.890733</td>\n",
-    "      <td>0.928007</td>\n",
-    "    </tr>\n",
-    "    <tr>\n",
-    "      <th>Foret aleatoire (simplify, OneHot=True)</th>\n",
-    "      <td>0.908173</td>\n",
-    "      <td>0.928469</td>\n",
-    "      <td>0.961481</td>\n",
-    "      <td>0.897649</td>\n",
-    "      <td>0.952755</td>\n",
-    "    </tr>\n",
-    "    <tr>\n",
-    "      <th>Classificateur naif bayesien (simplify, OneHot=True)</th>\n",
-    "      <td>0.788797</td>\n",
-    "      <td>0.831625</td>\n",
-    "      <td>0.841481</td>\n",
-    "      <td>0.821997</td>\n",
-    "      <td>0.844210</td>\n",
-    "    </tr>\n",
-    "    <tr>\n",
-    "      <th>Régression logistique (simplify, OneHot=True)</th>\n",
-    "      <td>0.914601</td>\n",
-    "      <td>0.932657</td>\n",
-    "      <td>0.954074</td>\n",
-    "      <td>0.912181</td>\n",
-    "      <td>0.955237</td>\n",
-    "    </tr>\n",
-    "    <tr>\n",
-    "      <th>Arbre de decision (original, OneHot=True)</th>\n",
-    "      <td>0.898990</td>\n",
-    "      <td>0.921316</td>\n",
-    "      <td>0.954074</td>\n",
-    "      <td>0.890733</td>\n",
-    "      <td>0.925810</td>\n",
-    "    </tr>\n",
-    "    <tr>\n",
-    "      <th>Foret aleatoire (original, OneHot=True)</th>\n",
-    "      <td>0.904500</td>\n",
-    "      <td>0.926031</td>\n",
-    "      <td>0.964444</td>\n",
-    "      <td>0.890561</td>\n",
-    "      <td>0.953727</td>\n",
-    "    </tr>\n",
-    "    <tr>\n",
-    "      <th>Classificateur naif bayesien (original, OneHot=True)</th>\n",
-    "      <td>0.787879</td>\n",
-    "      <td>0.829772</td>\n",
-    "      <td>0.834074</td>\n",
-    "      <td>0.825513</td>\n",
-    "      <td>0.826937</td>\n",
-    "    </tr>\n",
-    "    <tr>\n",
-    "      <th>Régression logistique (original, OneHot=True)</th>\n",
-    "      <td>0.915519</td>\n",
-    "      <td>0.933526</td>\n",
-    "      <td>0.957037</td>\n",
-    "      <td>0.911142</td>\n",
-    "      <td>0.954568</td>\n",
-    "    </tr>\n",
-    "  </tbody>\n",
-    "</table>\n",
-    "</div>"
+    "|   | Accuracy | F1 Score |\tRappel (recall) | Precision | ROC-AUC |\n",
+    "|---|:-:|:-:|:-:|:-:|:-:|\n",
+    "|Arbre de decision (simplify, OneHot=False)|\t0.889807|\t0.914408|\t0.949630|\t0.881706|\t0.930367|\n",
+    "|Foret aleatoire (simplify, OneHot=False)|\t0.909091|\t0.929235|\t0.962963|\t0.897790|\t0.955709|\n",
+    "|Classificateur naif bayesien (simplify, OneHot=False)|\t0.842057|\t0.876437|\t0.903704|\t0.850767|\t0.890862|\n",
+    "|Régression logistique (simplify, OneHot=False)|\t0.916437|\t0.934391|\t0.960000|\t0.910112|\t0.955044|\n",
+    "|Arbre de decision (original, OneHot=False)|\t0.889807|\t0.914408|\t0.949630|\t0.881706|\t0.927221|\n",
+    "|Foret aleatoire (original, OneHot=False)|\t0.908173|\t0.928775|\t0.965926|\t0.894376|\t0.953124|\n",
+    "|Classificateur naif bayesien (original, OneHot=False)|\t0.851240|\t0.883453|\t0.909630|\t0.858741|\t0.893163|\n",
+    "|Régression logistique (original, OneHot=False)|\t0.915519|\t0.933622|\t0.958519|\t0.909986|\t0.956103|\n",
+    "|Arbre de decision (simplify, OneHot=True)|\t0.889807|\t0.914408|\t0.949630|\t0.881706|\t0.930950|\n",
+    "|Foret aleatoire (simplify, OneHot=True)|\t0.904500|\t0.925501|\t0.957037|\t0.895978|\t0.951539|\n",
+    "|Classificateur naif bayesien (simplify, OneHot=True)|\t0.790634|\t0.832599|\t0.840000|\t0.825328|\t0.844956|\n",
+    "|Régression logistique (simplify, OneHot=True)|\t0.913682|\t0.931884|\t0.952593|\t0.912057|\t0.955463|\n",
+    "|Arbre de decision (original, OneHot=True)|\t0.889807|\t0.914408|\t0.949630|\t0.881706|\t0.926924|\n",
+    "|Foret aleatoire (original, OneHot=True)|\t0.904500|\t0.926031|\t0.964444|\t0.890561|\t0.947093|\n",
+    "|Classificateur naif bayesien (original, OneHot=True)|\t0.785124|\t0.825633|\t0.820741|\t0.830585|\t0.826728|\n",
+    "|Régression logistique (original, OneHot=True)|\t0.915519|\t0.933526|\t0.957037|\t0.911142|\t0.954568|"
    ]
   },
   {
@@ -322,18 +183,16 @@
     "\n",
     "#### Régression logistique\n",
     "##### avec OneHot\n",
-    "- accuracy : 0.914601\n",
-    "- f1-score : 0.932657\n",
+    "- accuracy : 0.913682\n",
+    "- f1-score : 0.931884\n",
     "\n",
     "##### sans OneHot\n",
-    "- accuracy : 0.914601\n",
-    "- f1-score : 0.932852\n",
+    "- accuracy : 0.916437\n",
+    "- f1-score : 0.934391\n",
     "\n",
     "#### Catboost\n",
     "- accuracy : 0.913682\n",
-    "- f1-score : 0.932953\n",
-    "\n",
-    "\n"
+    "- f1-score : 0.932953"
    ]
   },
   {
