--- a/logisticRegression.ipynb
+++ b/logisticRegression.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -357,6 +357,20 @@
     "y_pred = model.predict(X_test)\n",
     "print(classification_report(y_test, y_pred))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Info intéressante\n",
+    "\n",
+    "Scikit-learn's LogisticRegression can accept categorical data directly, it internally handles them by performing a one-vs-rest strategy or a one-vs-one strategy depending on the solver used. This allows logistic regression to work with categorical features without explicitly requiring one-hot encoding or ordinal encoding.\n",
+    "\n",
+    "In scikit-learn's logistic regression implementation:\n",
+    "\n",
+    "- For the 'liblinear' solver, it uses a one-vs-rest strategy.\n",
+    "- For the 'newton-cg', 'sag', 'saga', and 'lbfgs' solvers, it uses a one-vs-one strategy."
+   ]
   }
  ],
  "metadata": {
@@ -375,7 +389,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
