reformated and cleaned the code

--- a/analyse_shap_CatBoost.ipynb
+++ b/analyse_shap_CatBoost.ipynb
@@ -32,8 +32,8 @@
     "from sklearn.metrics import f1_score\n",
     "from catboost import CatBoostClassifier\n",
     "import catboost\n",
-    "from load_dataset import load_data\n",
-    "import utils\n",
+    "from data.load_dataset import load_data\n",
+    "import utils.utils\n",
     "import shap\n",
     "import numpy as np\n",
     "import pandas as pd"
