--- a/models/DecisionTree.ipynb
+++ b/models/DecisionTree.ipynb
@@ -17,8 +17,8 @@
     "from sklearn.feature_selection import SelectFromModel, SelectKBest, f_classif\n",
     "from IPython import display\n",
     "from IPython.display import Image\n",
-    "from load_dataset import load_data\n",
-    "import utils"
+    "from data.load_dataset import load_data\n",
+    "import utils.utils"
    ]
   },
   {
@@ -461,47 +461,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Voir l'arbre"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # un modele DT avec les meilleurs hp\n",
-    "# clf = DecisionTreeClassifier(\n",
-    "#     criterion='gini',\n",
-    "#     max_depth=6,\n",
-    "#     min_samples_split=210,\n",
-    "#     min_samples_leaf=15,\n",
-    "#     random_state=42\n",
-    "# )\n",
-    "\n",
-    "# clf.fit(X_train, y_train)\n",
-    "\n",
-    "# class_names = [str(x) for x in clf.classes_]\n",
-    "# dot_data = export_graphviz(\n",
-    "#     clf, \n",
-    "#     out_file=None, \n",
-    "#     feature_names=X_train.columns, \n",
-    "#     class_names=class_names, \n",
-    "#     filled=True,\n",
-    "#     rounded=True,\n",
-    "#     special_characters=True\n",
-    "# )\n",
-    "\n",
-    "# graph = graphviz.Source(dot_data)\n",
-    "# graph.render(\"./Arbre de decision\") \n",
-    "\n",
-    "# Image(graph.pipe(format='png'))\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Test : sélection de juste quelques features, avec la méthode SelectFromModel"
    ]
   },
@@ -676,9 +635,6 @@
     "selected_indices = selector.get_support(indices=True)\n",
     "\n",
     "selected_features_names = X.columns[selected_indices]\n",
-    "#print(\"features selectionnés :\")\n",
-    "#for feature in selected_features_names:\n",
-    "#    print(feature)\n",
     "\n",
     "\n",
     "selector = SelectKBest(f_classif, k=best_k).fit(X_train, y_train)\n",
