--- a/models/NaiveBayes.ipynb
+++ b/models/NaiveBayes.ipynb
@@ -9,7 +9,7 @@
     "import pandas as pd\n",
     "from sklearn.model_selection import train_test_split, GridSearchCV\n",
     "from sklearn.naive_bayes import GaussianNB\n",
-    "from load_dataset import load_data\n",
+    "from data.load_dataset import load_data\n",
     "from sklearn.metrics import classification_report\n",
     "\n",
     "import warnings\n",
