--- a/models/RandomForest.ipynb
+++ b/models/RandomForest.ipynb
@@ -13,8 +13,8 @@
     "from sklearn.model_selection import train_test_split, cross_val_score, GridSearchCV\n",
     "from sklearn.metrics import accuracy_score, classification_report, confusion_matrix\n",
     "from IPython import display\n",
-    "import utils\n",
-    "from load_dataset import load_data"
+    "import utils.utils\n",
+    "from data.load_dataset import load_data"
    ]
   },
   {
