--- a/models/SVC.ipynb
+++ b/models/SVC.ipynb
@@ -6,8 +6,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from load_dataset import load_data\n",
-    "import utils\n",
+    "from data.load_dataset import load_data\n",
+    "import utils.utils\n",
     "from sklearn.svm import SVC\n",
     "from sklearn.metrics import classification_report\n",
     "from sklearn.model_selection import GridSearchCV\n",
@@ -115,36 +115,6 @@
    "metadata": {},
    "source": [
     "## Optimisation d'hyperparamètres"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\" parameters_to_tune = {\\n    'kernel': ['linear', 'rbf', 'poly', 'sigmoid'],\\n    'C': [0.1, 1, 10, 100],\\n    'gamma': ['scale', 'auto', 0.001, 0.0001],\\n    'degree': [2, 3, 4]\\n}\\n\\ngrid_search = GridSearchCV(SVC(), parameters_to_tune, refit=True, verbose=3, cv=5, n_jobs=-1)\\ngrid_search.fit(X_train, y_train)\\n\\nprint(grid_search.best_params_) \""
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "\"\"\" parameters_to_tune = {\n",
-    "    'kernel': ['linear', 'rbf', 'poly', 'sigmoid'],\n",
-    "    'C': [0.1, 1, 10, 100],\n",
-    "    'gamma': ['scale', 'auto', 0.001, 0.0001],\n",
-    "    'degree': [2, 3, 4]\n",
-    "}\n",
-    "\n",
-    "grid_search = GridSearchCV(SVC(), parameters_to_tune, refit=True, verbose=3, cv=5, n_jobs=-1)\n",
-    "grid_search.fit(X_train, y_train)\n",
-    "\n",
-    "print(grid_search.best_params_) \"\"\""
    ]
   },
   {
