--- a/models/logisticRegression.ipynb
+++ b/models/logisticRegression.ipynb
@@ -10,8 +10,8 @@
     "from sklearn.model_selection import train_test_split, GridSearchCV\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.metrics import classification_report\n",
-    "import utils\n",
-    "from load_dataset import load_data\n",
+    "import utils.utils\n",
+    "from data.load_dataset import load_data\n",
     "\n",
     "import warnings\n",
     "warnings.filterwarnings(\"ignore\")"
