--- a/models_analysis.ipynb
+++ b/models_analysis.ipynb
@@ -245,9 +245,9 @@
     "from sklearn.model_selection import train_test_split\n",
     "from catboost import CatBoostClassifier\n",
     "\n",
-    "from load_dataset import load_data\n",
+    "from data.load_dataset import load_data\n",
     "\n",
-    "import utils\n",
+    "import utils.utils\n",
     "\n",
     "X, y, cat_features_catb = load_data().get_data_X_y(data='simplify')\n",
     "X_train_simplified, X_test_simplified, y_train_simplified, y_test_simplified = train_test_split(X, y, test_size=0.3, random_state=42)\n",
