--- a/utils/informations_pour_affiche.ipynb
+++ b/utils/informations_pour_affiche.ipynb
@@ -20,7 +20,7 @@
    "source": [
     "### Numéro d'équipe \n",
     "\n",
-    "- Équipe 5"
+    "- Équipe 8"
    ]
   },
   {
@@ -30,10 +30,10 @@
     "### Nom des coéquipiers \n",
     "\n",
     "- Jacob Comeau (536 850 694)\n",
-    "- Guillaume Gagnon ()\n",
+    "- Guillaume Gagnon (536 855 135)\n",
     "- Marc-Antoine Morneau ()\n",
-    "- Andrinirina Joël Velonjatovo ()\n",
-    "- Samuel Yergeau ()"
+    "- Andrinirina Joël Velonjatovo (111 140 630)\n",
+    "- Samuel Yergeau (111 266 125)"
    ]
   },
   {
@@ -147,7 +147,7 @@
     "\n",
     "## TODO Changer Classe 0 et 1 pour le vrai nom des classes\n",
     "\n",
-    "![Matrice de confusion](figures/conf_matrix_catboost.png)"
+    "![Matrice de confusion](../figures/conf_matrix_catboost.png)"
    ]
   },
   {
@@ -205,7 +205,7 @@
    "source": [
     "### Tableau de l'importance de chaque features sur le modèle avec les valeurs SHAP (bar plot) \n",
     "\n",
-    "![shap_bar_plot](figures/feature_importance_catboost_shap.png)"
+    "![shap_bar_plot](../figures/feature_importance_catboost_shap.png)"
    ]
   },
   {
@@ -214,7 +214,7 @@
    "source": [
     "### Tableau de l'impact de chaque features sur le modèle avec les valeurs SHAP (beeswarm plot)\n",
     "\n",
-    "![shap_beeswarm_plot](figures/beeswarm_catboost_shap.png)"
+    "![shap_beeswarm_plot](../figures/beeswarm_catboost_shap.png)"
    ]
   },
   {
@@ -223,7 +223,7 @@
    "source": [
     "### Exemple de l'impact de chaque feature sur une prédiction du jeu de données (waterfall plot)\n",
     "\n",
-    "![shap_waterfall_plot](figures/echantillon_impact_feature_shape.png)"
+    "![shap_waterfall_plot](../figures/echantillon_impact_feature_shape.png)"
    ]
   },
   {
