--- a/models/CatBoost.ipynb
+++ b/models/CatBoost.ipynb
@@ -6,8 +6,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from load_dataset import load_data\n",
-    "import utils\n",
+    "from data.load_dataset import load_data\n",
+    "import utils.utils\n",
     "from catboost import CatBoostClassifier\n",
     "from sklearn.metrics import classification_report\n",
     "from sklearn.model_selection import GridSearchCV\n",
@@ -572,7 +572,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
