--- a/models/KNN.ipynb
+++ b/models/KNN.ipynb
@@ -7,8 +7,8 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "from load_dataset import load_data\n",
-    "import utils\n",
+    "from data.load_dataset import load_data\n",
+    "import utils.utils\n",
     "\n",
     "from sklearn import metrics\n",
     "from sklearn import preprocessing\n",
@@ -121,18 +121,7 @@
     "    mean_acc[i-1] = metrics.accuracy_score(y_test, yhat)\n",
     "    \n",
     "k_range_cnt = 10\n",
-    "k_range = np.argpartition(mean_acc, -k_range_cnt)[-k_range_cnt:]\n",
-    "#print(k_range)\n",
-    "\n",
-    "\"\"\"\n",
-    "loc = np.arange(1,n_range + 1,step=1.0)\n",
-    "plt.figure(figsize = (10, 6))\n",
-    "plt.plot(range(1,n_range + 1), mean_acc)\n",
-    "plt.xticks(loc)\n",
-    "plt.xlabel('Number of Neighbors ')\n",
-    "plt.ylabel('Accuracy')\n",
-    "plt.show()\n",
-    "\"\"\"\n"
+    "k_range = np.argpartition(mean_acc, -k_range_cnt)[-k_range_cnt:]\n"
    ]
   },
   {
@@ -228,28 +217,6 @@
     "names = ['control', 'with optimized hyperparameters']\n",
     "\n",
     "utils.compare_classifiers(tuned_clf, X, y, clf_names=names)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'KNeighborsClassifier' object has no attribute 'feature_importances_'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\samue\\Documents\\school\\A2023\\GIF-4101\\proj\\MachineLearningStudentSuccess\\KNN.ipynb Cell 13\u001b[0m line \u001b[0;36m1\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/samue/Documents/school/A2023/GIF-4101/proj/MachineLearningStudentSuccess/KNN.ipynb#X34sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m utils\u001b[39m.\u001b[39;49mfeatures_importance(KNeighborsClassifier(\u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mtuned_best_param_1), X_train_cpy\u001b[39m.\u001b[39;49mcolumns, plot\u001b[39m=\u001b[39;49m\u001b[39mFalse\u001b[39;49;00m, log\u001b[39m=\u001b[39;49m\u001b[39mTrue\u001b[39;49;00m)\n",
-      "File \u001b[1;32mc:\\Users\\samue\\Documents\\school\\A2023\\GIF-4101\\proj\\MachineLearningStudentSuccess\\utils.py:90\u001b[0m, in \u001b[0;36mfeatures_importance\u001b[1;34m(clf, X_train_columns, plot, _coef, log)\u001b[0m\n\u001b[0;32m     88\u001b[0m     feat_imp \u001b[39m=\u001b[39m clf\u001b[39m.\u001b[39mcoef_\u001b[39m.\u001b[39mT\n\u001b[0;32m     89\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m---> 90\u001b[0m     feat_imp \u001b[39m=\u001b[39m clf\u001b[39m.\u001b[39;49mfeature_importances_\n\u001b[0;32m     91\u001b[0m feat_df \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39mDataFrame(\n\u001b[0;32m     92\u001b[0m     feat_imp, index\u001b[39m=\u001b[39mX_train_columns, columns\u001b[39m=\u001b[39m[\u001b[39m\"\u001b[39m\u001b[39mImportance\u001b[39m\u001b[39m\"\u001b[39m])\n\u001b[0;32m     93\u001b[0m \u001b[39msorted\u001b[39m \u001b[39m=\u001b[39m feat_df\u001b[39m.\u001b[39msort_values(by\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mImportance\u001b[39m\u001b[39m\"\u001b[39m, ascending\u001b[39m=\u001b[39m\u001b[39mFalse\u001b[39;00m)\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'KNeighborsClassifier' object has no attribute 'feature_importances_'"
-     ]
-    }
-   ],
-   "source": [
-    "#utils.features_importance(KNeighborsClassifier(**tuned_best_param_1), X_train_cpy.columns, plot=False, log=True)"
    ]
   },
   {
