--- a/models/XGBoost.ipynb
+++ b/models/XGBoost.ipynb
@@ -6,8 +6,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from load_dataset import load_data\n",
-    "import utils\n",
+    "from data.load_dataset import load_data\n",
+    "import utils.utils\n",
     "import xgboost as xgb\n",
     "from sklearn.model_selection import train_test_split, cross_val_score, GridSearchCV\n",
     "from sklearn.metrics import classification_report\n",
