--- a/models/agregation/Agregation-DT-RF-CNB-LR.ipynb
+++ b/models/agregation/Agregation-DT-RF-CNB-LR.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "from load_dataset import load_data\n",
+    "from data.load_dataset import load_data\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.naive_bayes import GaussianNB, CategoricalNB\n",
@@ -1566,7 +1566,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
