--- a/models/agregation/agregation_xgb-svc-knn-cat.ipynb
+++ b/models/agregation/agregation_xgb-svc-knn-cat.ipynb
@@ -22,7 +22,7 @@
         "from sklearn.metrics import classification_report, f1_score\n",
         "from catboost import CatBoostClassifier\n",
         "\n",
-        "from load_dataset import load_data"
+        "from data.load_dataset import load_data"
       ]
     },
     {
@@ -3199,12 +3199,6 @@
         "catboost_model = CatBoostClassifier(cat_features=cat_features_catb, verbose=0, random_state=42)\n",
         "\n",
         "# Define the parameter grid to search\n",
-        "''' param_grid = {\n",
-        "    'iterations': [None, 100, 200, 300],\n",
-        "    'learning_rate': [None, 0.01, 0.05, 0.1],\n",
-        "    'depth': [None, 4, 6, 8],\n",
-        "    'l2_leaf_reg': [None, 1, 3, 5],\n",
-        "} '''\n",
         "param_grid = {\n",
         "    'iterations': [1000],\n",
         "    'learning_rate': [0.01, 0.05, 0.1],\n",
@@ -3579,7 +3573,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.10.12"
+      "version": "3.11.0"
     }
   },
   "nbformat": 4,
